tests/ok/enum-match.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn score(value: OptionI32) -> i64 {
  match value {
    Some(inner) => {
      return inner as i64;
    }
    None => {
      return 0;
    }
  }
}

fn fallback(value: OptionI32) -> i64 {
  match value {
    Some(_) => {
      return 2;
    }
    _ => {
      return 3;
    }
  }
}

fn main() -> i64 {
  return score(Some(5)) + fallback(None) + fallback(Some(1));
}
